# checkit

./: .example.ipynb.sage-jupyter2  .gitignore  .python-version  LICENSE  README.md  VERSION  build.ipynb  build_docs.py  checkit.py  dashboard.ipynb  example.ipynb  html.xsl  latex.xsl  library-preview.ipynb  main.sage  masterit.sage  preview.ipynb  qti.xsl  setup.py  tutorial.ipynb
.devcontainer/: devcontainer.json  setup.sh
banks/: build.ipynb  preview.ipynb
checkit/: __init__.py  bank.py  dashboard.py  exercise.py  outcome.py  xml.py
dashboard/: README.md  setup.cfg  setup.py  update_viewer.py
dashboard/checkit/: __init__.py  __main__.py  bank.py  dashboard.py  outcome.py
dashboard/checkit/static/: README.md  VERSION  dashboard.ipynb  devcontainer.json  generator.sage  gitignore.txt  html.xsl  pretext.xsl  setup.sh
dashboard/checkit/wrapper/: __init__.py  wrapper.sage
dashboard/src/checkit/: __main__.py  bank.py  dashboard.py  exercise.py
dashboard/src/checkit/static/: __init__.py  bank.xml  dashboard.ipynb  template.xml
demo-bank/: bank.xml  dashboard.ipynb
docs/: CNAME  index.html
docs/demo/: bank.json  (+2 more)
libraries/: build.ipynb
old-viewer/: package.json
platform/: setup.py
scripts/: generator.sage
viewer/: README.md  index.html  package-lock.json  package.json  rollup.config.js  vite.config.ts
wrappers/: sage_boilerplate.sage  sage_wrapper.sage
xml/: brightspace_manifest.xml  brightspace_questiondb_exercise.xml  brightspace_questiondb_outcome.xml  template_boilerplate.xml
xsl/: brightspace_statement.xsl  html.xsl  latex.xsl  qti.xsl
(+185 files in other folders)
