[metadata]
name = checkit-dashboard
version = attr: checkit.VERSION
author = Steven Clontz
author_email = steven.clontz@gmail.com
description = Dashboard for authoring/disseminating randomized exercises
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8.0
include_package_data = True
packages = find:
install_requires =
    ipywidgets
    lxml
    latex2mathml
    pystache
    click

[options.package_data]
checkit = static/*, wrapper/*

[options.extras_require]
dev = 
    build
    twine
    ipykernel
